--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <img src="./assets/about.png" alt="">
         </div>
    
-         <div class="text-[#1F2937] md:ml-5 md:mt-10">
+         <div class="text-[#1F2937] md:ml-5 md:mt-10 mt-5 md:mt-0">
           <p>Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore forests, create habitats for wildlife, and combat global warming.</p>
           <ul class="list-disc md:ml-5 pl-5 md:pl-0">
             <li>Restoration of natural habitats</li>
